examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/record_fields_order.st
language core;

extend with #records;
fn foo(succeed : Bool) -> { a : Nat, b : Nat } {
  	return { a = 0, b = 0 }
}

fn main(succeed : Nat) -> { b : Nat, a : Nat } {
  return foo(true)
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
